# rabin_ida

./: Cargo.toml  LICENSE_BSD.md  LICENSE_MIT.md  README.md
benches/: ida_benchmark.rs
proptest-regressions/: lib.txt
src/: gf.rs  ida.rs  ids.rs  lib.rs  rabin_share.rs  share.rs
