[package]
name = "rabin_ida"
version = "0.1.3"
edition = "2018"
authors = ["David Irvine <david.irvine@maidsafe.net>, Liam Perlaki <lperlaki@icloud.com>"]
repository = "https://github.com/dirvine/rabin_ida"
description = "Rabin's information dispersal algorithm, originally by Liam Perlaki"
license = "MIT"
readme = "./README.md"

[dev-dependencies]
test-strategy = "0.2.0"
proptest = "1.0.0"
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "ida_benchmark"
harness = false
